Bug 190081 - Disabling "Show in KDE only" does not work
Summary: Disabling "Show in KDE only" does not work
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-19 17:09 UTC by Unknown
Modified: 2011-09-30 12:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2009-04-19 17:09:49 UTC
Version:           0.8 (using 4.2.2 (KDE 4.2.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-11-generic

Disabling the checkbox "Show in KDE only" does not work. When I uncheck it and then select another menu entry in the editor and go back, it is selected again. Also saving while I still look at the item I want to disable that option for does nothing, after selecting another item or restarting the menu editor that checkbox is checked again. I have to remove the icon and re-create it to disable that option.

This is KDE 4.2.2 (Kubuntu 9.04 RC)
Comment 1 Unknown 2009-11-14 10:44:44 UTC
The issue persists in KDE 4.3.2 (Kubuntu)
Comment 2 Will Stephenson 2009-11-23 17:56:21 UTC
Confirmed in SVN1053000
Comment 3 Ralf Jung 2010-05-29 13:40:53 UTC
I have the same issue in KDE 4.4, Kubuntu 10.04.
Instead of removing the item, one can also manually edit the .desktop file in ~/.local/share/applications/ and remove the line saying "OnlyShowIn=KDE;".
Comment 4 Ralf Jung 2011-04-19 16:13:16 UTC
KDE 4.6.2 still has the same issue.
Comment 5 Ralf Jung 2011-09-26 18:42:49 UTC
I created a patch and posted it for review at https://git.reviewboard.kde.org/r/102713/
Comment 6 Aaron J. Seigo 2011-09-30 12:32:37 UTC
Git commit 76589567624eadbb2c07ca2578dafa24cb34681a by Aaron Seigo.
Committed on 30/09/2011 at 14:19.
Pushed by aseigo into branch 'master'.

fix "only show in KDE" toggling

patch by Ralf Jung
REVIEW:102713
BUG:190081

M  +9    -9    kmenuedit/basictab.cpp

http://commits.kde.org/kde-workspace/76589567624eadbb2c07ca2578dafa24cb34681a
Comment 7 Aaron J. Seigo 2011-09-30 12:32:54 UTC
Git commit 2ab926ecdc301cce8ebfb9609201f3ebd35dba1a by Aaron Seigo.
Committed on 30/09/2011 at 14:19.
Pushed by aseigo into branch 'KDE/4.7'.

fix "only show in KDE" toggling

patch by Ralf Jung
REVIEW:102713
BUG:190081

M  +9    -9    kmenuedit/basictab.cpp

http://commits.kde.org/kde-workspace/2ab926ecdc301cce8ebfb9609201f3ebd35dba1a