fix "only show in KDE" toggling

patch by Ralf Jung
REVIEW:102713
BUG:190081