kmenuedit/basictab.cpp
@@ -406,13 +406,8 @@ void BasicTab::setEntryInfo(MenuEntryInfo *entryInfo)
     else // backwards comp.
         _launchCB->setChecked(df->desktopGroup().readEntry("X-KDE-StartupNotify", true));
 
-    _onlyShowInKdeCB->setChecked( false );
-    if ( df->desktopGroup().hasKey( "OnlyShowIn") )
-    {
-        if ( df->desktopGroup().readXdgListEntry("OnlyShowIn").contains( "KDE" ) )
-            _onlyShowInKdeCB->setChecked( true );
-
-    }
+    _onlyShowInKdeCB->setChecked( df->desktopGroup().readXdgListEntry("OnlyShowIn").contains( "KDE" ) );
+    
     if ( df->desktopGroup().hasKey( "NoDisplay" ) )
         _hiddenEntryCB->setChecked( df->desktopGroup().readEntry( "NoDisplay", true ) );
     else
@@ -458,8 +453,13 @@ void BasicTab::apply()
         dg.writeEntry("X-KDE-Username", _uidEdit->text());
         dg.writeEntry("StartupNotify", _launchCB->isChecked());
         dg.writeEntry( "NoDisplay", _hiddenEntryCB->isChecked() );
-        if ( _onlyShowInKdeCB->isChecked() )
-            dg.writeXdgListEntry( "OnlyShowIn", QStringList()<<"KDE" );
+
+        QStringList onlyShowIn = df->desktopGroup().readXdgListEntry("OnlyShowIn");
+        if ( _onlyShowInKdeCB->isChecked() && !onlyShowIn.contains("KDE"))
+            onlyShowIn << "KDE";
+        else if ( !_onlyShowInKdeCB->isChecked() && onlyShowIn.contains("KDE"))
+            onlyShowIn.removeAll("KDE");
+        dg.writeXdgListEntry("OnlyShowIn", onlyShowIn);
     }
     else
     {
